# wikipedia-knowledge-agent

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
agents/: wiki-biomimetic.md  wiki-consilience.md  wiki-contrarian.md  wiki-explorer.md  wiki-flaneur.md  wiki-reflector.md
eval/: collect-stats.sh  llm-judge.sh  strip_comments.py
paper/: 01-load-balancer.aux  01-load-balancer.fdb_latexmk  01-load-balancer.fls  01-load-balancer.out  01-load-balancer.tex
scripts/: build_categories.py  split_articles.py
setup/: build-index.sh  download-wikipedia.sh
skill/: SKILL.md
skills/wiki-lookup/: SKILL.md
tests/: run-experiment.sh
tests/benchmarks/: 01_load_balancer.py  report.py  run_benchmarks.sh
tests/contracts/01_load_balancer/: README.md  types.py
tests/problems/: 01-load-balancer.md  02-cache-eviction.md  03-consensus.md  04-recommendation.md  05-routing.md  06-race-condition.md  07-bst.md  08-csv-parser.md  09-debug-test.md  10-pagination.md
