[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikipedia-knowledge-agent"
version = "0.1.0"
description = "Experiment in lateral knowledge transfer — giving Claude Code access to all of Wikipedia"
requires-python = ">=3.11"
dependencies = [
    "wikiextractor @ git+https://github.com/santhoshtr/wikiextractor@master",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.1",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project.scripts]
split-articles = "scripts.split_articles:main"
